# solhsa-sdl3

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Info.plist.in  ccache.cmake
src/: main.cpp  sprites.hpp  stopwatch.hpp
